# predictive_cyberattack

./: .gitignore  Makefile  PySparkDataAnalytics.py  PySparkMulticlassClassificationAll.py  PySparkNaiveBayesClassifier.py  README.md  pyproject.toml  trend_plots.py  unsw-nb15_analysis.sql
.github/workflows/: ci.yml
configs/: demo.yaml  hadoop_local.yaml  unsw_nb15_zenodo.yaml
data/sample/: unsw_sample.csv
docs/: architecture.md  execution_profiles.md  hadoop_hive_spark.md  results.md
docs/data/: unsw_nb15.md
hive/: 01_create_external_tables.sql  02_profile_data.sql  03_clean_transform.sql  04_export_feature_tables.sql  05_verify_tables.sql
legacy/: PySparkBinaryClassificationAll.py  README.md
scripts/: bootstrap_local_stack.sh  download_dataset.py  run_hive_sql.py  setup_hadoop_config.py
src/predictive_cyberattack/: __init__.py  config.py  environment.py  spark_session.py
src/predictive_cyberattack/pipelines/: __init__.py  check_environment.py  run_feature_pipeline.py  run_scoring_pipeline.py  run_training_pipeline.py
src/predictive_cyberattack/spark/: __init__.py  evaluate.py  io.py  prepare_features.py  train.py  validation.py
tests/: test_config.py  test_environment.py  test_feature_config.py  test_validation.py
